# edgar-parser

./: .gitignore  README.md  edgar-parser.toml  pyproject.toml
catalog/: filings.jsonl
docs/: orynd-integration-guide.md  phase-01-architecture.md
sec/indexes/: company_tickers.json
sec/submissions/: CIK0001067983-submissions-001.json  CIK0001067983.json
src/edgar_foundry/: __init__.py  __main__.py  cli.py  config.py  io.py  paths.py  schemas.py
src/edgar_parser/: __init__.py  __main__.py  cli.py  config.py  def14a.py  discovery.py  eightk.py  fetch.py  io.py  narrative_reports.py  paths.py  periodic_reports.py  schemas.py  sec_client.py  tenk.py  tenq.py  thirteenf.py
tests/: test_cli.py  test_discovery.py  test_fetch.py  test_layout_and_schemas.py  test_parse_def14a.py  test_parse_eightk.py  test_parse_tenk.py  test_parse_tenq.py  test_parse_thirteenf.py
tests/fixtures/thirteenf/: berkshire_2003_0000950150-03-000988.txt  berkshire_2012_0001193125-12-470800.txt  loews_2001_0000060086-01-500013.txt  loews_2003_0000060086-03-000046.txt  loews_2013_0000060086-13-000013.txt
ticker/brk-b/13F/1999-05-17_0000950148-99-001187/: 0000950148-99-001187.txt  index.json  manifest.json
ticker/brk-b/13F/1999-08-13_0000950148-99-001809/: 0000950148-99-001809.txt  index.json  manifest.json
ticker/brk-b/13F/1999-11-15_0000950150-99-001240/: 0000950150-99-001240.txt  index.json  manifest.json
ticker/brk-b/13F/2000-02-14_0000950150-00-000102/: 0000950150-00-000102.txt  index.json  manifest.json
ticker/brk-b/13F/2000-02-15_0000950150-00-000118/: 0000950150-00-000118.txt  (+2 more)
(+818 files in other folders)
